--- a/XamarinStore.iOS/XamarinStore.iOS.csproj
+++ b/XamarinStore.iOS/XamarinStore.iOS.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-    <ProductVersion>10.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{FC7E7851-4A32-4B43-A9E6-F68AC1EF613E}</ProjectGuid>
     <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
@@ -224,6 +222,7 @@
     <Compile Include="Views\AutoCompleteTextEntry.cs" />
     <Compile Include="Helpers\UIViewExtensions.cs" />
     <Compile Include="ViewControllers\StringTableViewController.cs" />
+    <Compile Include="XamStoreStyleKit.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
   <ItemGroup>
@@ -264,6 +263,8 @@
     <BundleResource Include="Resources\t-shirt%402x.png" />
     <BundleResource Include="Resources\circle.png" />
     <BundleResource Include="Resources\circle%402x.png" />
+    <BundleResource Include="Resources\allShirts.png" />
+    <BundleResource Include="Resources\allShirts%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <XamarinComponentReference Include="btprogresshud">
